full-config.yml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
---
# backend service
apiVersion: v1
kind: Service
metadata:
  namespace: myapp
  name: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: myapp
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
---
# frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: myapp
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: myapp
    app.kubernetes.io/component: api
spec:
  replicas: 2

  selector:
    matchLabels:
      app.kubernetes.io/name: backend
      app.kubernetes.io/part-of: myapp
  
  # securityContext:
  #   seccompProfile:
  #     type: RuntimeDefault
  
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
        app.kubernetes.io/part-of: myapp
    spec:
      containers:
        - name: backend
          image: pdevfig/temp-api:0.1.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 512Mi
          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: True
            seccompProfile:
              type: RuntimeDefault
---
# frontend service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: myapp
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: myapp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: myapp
  ports:
    - name: http 
      port: 80
      targetPort: http
      protocol: TCP
---
# frontend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: myapp
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: myapp
spec:
  replicas: 2

  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/part-of: myapp
    
  # securityContext:
  #   seccompProfile:
  #     type: RuntimeDefault
  
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: myapp
    spec:
      containers:
        - name: frontend
          image: pdevfig/front-temp:0.1.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 512Mi
          
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            failureThreshold: 14
          
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 2
          
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 20
