gateway-related.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: myapp
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
# http route
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-routes
  namespace: myapp
spec:
  parentRefs:
    - name: gateway
  rules:
    # exact match
    - matches:
        - path:
            type: PathPrefix 
            value: /
      backendRefs:
        - name: frontend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters: 
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: backend
          port: 9000
